# slidesync

./: .gitignore  CMakeLists.txt  README.md
src/: CVCanvas.cpp  CVCanvas.hpp  GenLoop.cpp  GenLoop.hpp  IMhelpers.cpp  IMhelpers.hpp  Loops.cpp  Loops.hpp  ProcessLoop.cpp  ProcessLoop.hpp  Quad.cpp  Quad.hpp  SlideSync.cpp  SlideSync.hpp  SyncInstructions.cpp  SyncInstructions.hpp  SyncLoop.cpp  SyncLoop.hpp  avhelpers.cpp  avhelpers.hpp  util.cpp  util.hpp
